public/style.css
body {
    font-family: 'Arial', sans-serif;
    background: linear-gradient(to bottom, #4e3a8e, #8f70c5);
    color: #d3d3d3;
    margin: 0;
    padding: 0;
    display: flex;
    align-items: center;
    justify-content: center;
    height: 100vh;
}

p {
    margin: 10px 0;    
}

button {
    color: #d3d3d3;
    background-color: #383c4a;
}

#loaded_verbs_list {
    height: 100%;
    overflow: scroll;
}

#loaded_verbs_container {
    overflow: none;
}

#center_div {
    padding: 20px;
    border-radius: 8px;
    box-shadow: 0 0 10px rgba(255, 255, 255, 0.1);
    color: #d3d3d3;
    background-color: #383c4a;
    text-align: center;
    width: 300px;
    align-items: flex-start;
    display: flex;
    flex-direction: column;
    align-items: center;
}

#right_div {
    position: absolute;
    right: 0;
    top: 0;
    padding: 20px;
    border-radius: 8px;
    box-shadow: 0 0 10px rgba(255, 255, 255, 0.1);
    color: #d3d3d3;
    background-color: #383c4a;
    text-align: center;
    width: 15%;
    height: calc(100% - 40px);
    align-items: flex-start;
    display: flex;
    flex-direction: column;
    align-items: left;
}

#score_container {
    display: flex;
    justify-content: space-between;
    width: 100%;
}

#input {
    padding: 10px;
    margin-top: 10px;
    border: 1px solid #555;
    border-radius: 4px;
    width: 200px;
    color: #000;
    background-color: #d3d3d3;
}

.score {
    color: #d3d3d3;
}

.score.best {
    color: lightgreen;
}

.hide {
    display: none;
}

